[tool.poetry]
name = "jpg-location-finder"
version = "0.1.0"
description = ""
authors = ["nadavgk <nadavgk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
exif = "^1.6.0"
requires = "^0.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
